JEDIT 4.1 VERSION HISTORY

* Version 4.1pre9 -- 4.1 release candidate 1

Thanks to Chris Petersen, Kris Kopicki and Reinout van Schouwen for
contributing to this release.

+ Syntax Highlighting Changes:

- Added gettext mode (primarily used on Unix for translating programs
  to other languages.) (Reinout van Schouwen)

- Updated PHP and Perl syntax highlighting (Chris Petersen).

+ Performance Enhancements:

- Much faster auto indent.

+ Bug Fixes:

- Saving a file from one file system to another using the "Save a Copy
  As" command could cause problems if the destination VFS implemented
  the _saveComplete() method. This method was only passed a buffer
  instance, and there was no way to obtain the destination path.

- Making changes above the first line did not scroll the text area.

- Fixed a bug with nested compound edits. I'm not sure if it ever caused
  any problems, however it did affect performance.

- More fixes for non-standard mouse button handling under MacOS X
  (Kris Kopicki).

+ API Changes:

- VFS._saveComplete(Object session, Buffer buffer, Component comp) is
  now VFS._saveComplete(Object session, Buffer buffer, String path,
  Component comp).

+ API Additions:

- HyperSearchResults.getTree() method added.

* Version 4.1pre8

Thanks to Carmine Lucarelli, Chris Petersen, Jonathan Revusky,
Kris Kopicki, Silas Smith and Will Varfar for contributing to this
release.

+ Syntax Highlighting Changes:

- Icon syntax highlighting (Silas Smith).

- Redcode syntax highlighting (Will Varfar).

- Minor updates to JavaScript, PHP and ShellScript modes
  (Chris Petersen).

- Updated FreeMarker syntax highlighting (Jonathan Revusky).

- Java mode now highlights "assert" and "strictfp" keywords.

+ Auto Indent Changes:

- "indentPrevLine" buffer-local property now named "indentNextLine".
  Update your modes.

- Added a new "indentNextLines" property that indents all subsequent
  lines, not just the next line. This finally gives correct auto-indent